--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -380,6 +380,22 @@ label[for]:hover {
 	text-shadow: 0 0 1px #000;
 }
 
+.video-img{
+	width: 80px;
+	height: 80px;
+}
+.video-img video{
+	width: 100%;
+    height: 100%;
+}
+.video-img-area{
+	height: 375px;
+    width: 100%;
+}
+.video-img-area video{
+	width: 100%;
+    height: 100%;
+}
 .rating [type="radio"]:nth-of-type(1):checked ~ .stars label:nth-of-type(-n+1),
 .rating [type="radio"]:nth-of-type(2):checked ~ .stars label:nth-of-type(-n+2),
 .rating [type="radio"]:nth-of-type(3):checked ~ .stars label:nth-of-type(-n+3),
